--- a/LabTable.html
+++ b/LabTable.html
@@ -9,8 +9,8 @@
                 <th rowspan="2">姓名</td><th colspan="3">各科成績</td><th rowspan="2">名次</td>
                 <tr><th>國文<th>英文<th>數學</tr>
                 <tr align="center"><td>趙大</td><td>86</td><td>95</td><td>90</td><td>1</td></tr>
-                <tr align="center"><td>錢多</td><td>84</td><td>88</td><td>92</td><td>2</td></TR>
-                <tr align="center"><td>王偉</td><td>70</td><td>85</td><td>94</td><td>3</td></TR>
+                <tr align="center"><td>錢多</td><td>84</td><td>88</td><td>92</td><td>2</td></tr>
+                <tr align="center"><td>王偉</td><td>70</td><td>85</td><td>94</td><td>3</td></tr>
             </tr>
             </tr>
         </table>
